@@ -1,4 +1,4 @@
-SUBDIRS = src data tests
+SUBDIRS = src data
 
 MAINTAINERCLEANFILES = aclocal.m4 compile config.guess config.sub configure depcomp install-sh ltmain.sh Makefile.in missing
 
