@@ -1,5 +1,16 @@
 2009-09-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
+	Speed up building and package creation, for bifh user's pleasure.
+
+	* debian/rules:
+	  autogen.sh only if ./configure doesn't exist yet.
+	* Makefile.am:
+	  Don't build the test programs.
+	* src/home/Makefile.am:
+	  Remove trailing whitespace, who knows what did it cause.
+
+2009-09-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
 	Plug in memory leaks.
 
 	* src/home/hd-render-manager.c (hd_render_manager_append_geo_cb):
